# puntoverde_reloj_checador

./: info.txt  notas.txt  pyproject.toml
src/: apartados.py  apartados_dao.py  main.py  mysql_conexion.py  prueba.py  usuarios_flet_dao.py  view_main.py
src/jar_huella/: README.TXT
src/old/: main copy 2.py  main copy.py  prueba_digital.py
src/views/: apartado_equipos_view.py  equipos_view.py  espacios_deportivos_view.py  login_view.py
